--- a/src/main/resources/templates/fragmentos/layout.html
+++ b/src/main/resources/templates/fragmentos/layout.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	  xmlns:th="http://www.thymeleaf.org"	
-  	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout>
+  	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 	<meta charset="UTF-8">
 	<title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">Sistema de marcação de consultas</title>
 	
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<script th:src="@{vendor/js/jquery.min.js}"></script>
+	<script th:src="@{vendor/bootstrap/bootstrap.min.js}"></script>
+	<link rel="stylesheet"th:href="@{vendor/bootstrap/bootstrap.min.css}">
+	
 	
 </head>
 <body>
+
+	<div> <!-- Topo -->
+	
+	</div> <!-- /Topo -->
+	
+	<div> <!-- Conteudo -->
+		
+		<th:block layout:fragment="conteudo">
+		</th:block>
+		
+	</div> <!-- /Conteudo -->
+	
+	<div> <!-- Rodapé -->
+	
+	</div> <!-- /Rodapé -->
+
 
 </body>
 </html>
