--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" 
+	xmlns:th="http://www.thymeleaf.org" 
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" 
+	layout:decorate="~{fragmentos/layout}">
 <head>
-<meta charset="ISO-8859-1">
 <title>Sismac</title>
 </head>
 <body>
 
-	<h1>Sismac</h1>
-	<a href="login">Login</a>
+	<th:block layout:fragment="conteudo">
 	
+		<h1>Sismac</h1>
+		<a href="login">Login</a>
+	</th:block>
 </body>
 </html>
