Colocando site de exemplo

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,7 @@
 	
 		<h1>Sismac</h1>
 		<a href="login">Login</a>
+		<h1><a href="https://colorlib.com/preview/theme/drcare/">exemplo</a></h1>
 	</th:block>
 </body>
 </html>
