--- a/src/main/resources/templates/fragmentos/layout.html
+++ b/src/main/resources/templates/fragmentos/layout.html
@@ -10,6 +10,7 @@
 	<title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">Sistema de Marcação de Consultas</title>
 	
 	<script th:src="@{/vendor/js/jquery.min.js}"></script>
+    <script th:src="@{/vendor/js/jquery.mask.js}"></script>	
 	<script th:src="@{/vendor/fontawesome/js/all.min.js}"></script>
 	<script th:src="@{/vendor/bootstrap/bootstrap.min.js}"></script>
 	
