--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,16 @@
 <body>
 
 	<th:block layout:fragment="conteudo">
-	
+		<div class="row" style="height: 200px; background-color: #2f89fc;">
+			<div class="col-12 my-auto">
+				<div class="d-flex justify-content-center">
+					<h2 class="font-weight-bold text-white">Consultas e Exames</h2>
+				</div>
+			</div>
+		</div>
+		
+		
+		
 		<h1>Sismac</h1>
 		<h1><a href="https://colorlib.com/preview/theme/drcare/">exemplo</a></h1>
 	</th:block>
