--- a/src/main/resources/templates/pacientes/form.html
+++ b/src/main/resources/templates/pacientes/form.html
@@ -11,40 +11,57 @@
 <body>
 	
 	<th:block layout:fragment="conteudo">
-		
-			<form class="border py-2 px-5" th:action="@{/pacientes/salvar}" th:object="${paciente}">
-				
+		<div class="row" style="height: 200px; background-color: #2f89fc;">
+			<div class="col-12 my-auto">
 				<div class="d-flex justify-content-center">
-					<h3>Cadastro de Pacientes</h3>
+					<h2 class="font-weight-bold text-white">Cadastro de Pacientes</h2>
 				</div>
-				
-				<div class="d-flex justify-content-center form-group">
-					<div class="col-4">
-						<input type="text" id="nome" th:field="*{nome}" class="form-control my-2" placeholder="Nome Completo" required maxlength="100">
-						<input type="text" id="cpf" th:field="*{cpf}" class="form-control my-2" placeholder="CPF" required>
-						<input type="text" id="nome-mae" th:field="*{nomeMae}" class="form-control" placeholder="Nome da Mãe" required  maxlength="100">
+			</div>
+		</div>
+		
+		<div class="d-flex justify-content-center">
+			<div class="card mt-4 mb-4 p-4 col-8" >
+				<form class="py-2" th:action="@{/pacientes/salvar}" th:object="${paciente}">
+	
+					<div class="d-flex justify-content-center form-group">
+						<div class="col-12 col-sm-8">
+							<input type="text" id="nome" th:field="*{nome}" class="form-control my-2" placeholder="Nome Completo" required maxlength="100">
+							<input type="text" id="cpf" th:field="*{cpf}" class="form-control my-2" placeholder="CPF" required>
+							<input type="text" id="nome-mae" th:field="*{nomeMae}" class="form-control my-2" placeholder="Nome da Mãe" required  maxlength="100">
+							<input type="text" id="cns" th:field="*{CNS}" class="form-control my-2" placeholder="CNS" required  maxlength="100">
+							
+							<div class="form-group row">
+								<div class="col-6">
+									<input type="number" id="idade" th:field="*{idade}" title="idade" class="form-control my-2" placeholder="Idade" required min="1" max="120">
+								</div>
+								<div class="col-6">
+									<select id="sexo" th:field="*{sexo}" class="form-control my-2" required>
+										<option value="">Sexo</option>
+										<option value="M">Masculino</option>
+										<option value="F">Feminino</option>
+									</select>	
+								</div>						
+							
+							</div>
+							
+							
+						</div>
+					</div>	
+					
+					<div class="d-flex justify-content-center ">
+						<input type="submit" class="btn btn-primary btn-submit-hover btn-sismac" value="Salvar">
 					</div>
-					<div class="col-2">
-						<input type="number" id="idade" th:field="*{idade}" class="form-control my-2" placeholder="Idade" required min="1" max="120">
-						<select id="sexo" th:field="*{sexo}" class="form-control my-2" required>
-							<option value="">Sexo</option>
-							<option value="M">Masculino</option>
-							<option value="F">Feminino</option>
-						</select>
-						<input type="text" id="cns" th:field="*{CNS}" class="form-control" placeholder="CNS" required  maxlength="100">
-					</div>
-				</div>	
-				
-				<div class="d-flex justify-content-center ">
-					<input type="submit" class="form-control col-1 btn-primary" value="Salvar">
-				</div>
-				
-			</form>
-			<script type="text/javascript">
-			
-				$('#cpf').mask('000.000.000-00', {reverse: true});
+					
+				</form>
+			</div>
+		
+		</div>
+		
+		<script type="text/javascript">
+		
+			$('#cpf').mask('000.000.000-00', {reverse: true});
 
-			</script>
+		</script>
 	</th:block>
 	
 </body>
