Fazendo mais alguns ajustes

--- a/src/main/resources/templates/fragmentos/layout.html
+++ b/src/main/resources/templates/fragmentos/layout.html
@@ -24,7 +24,7 @@
 
 	<!-- Topo -->
 	<div >
-		<div class="d-flex justify-content-around p-4">
+		<div class="d-flex justify-content-around p-4" style="background-color: #f9f9f9;">
 			
 			<div>
 				<i class="fas fa-map-pin text-primary"></i> Canguaretama - RN
@@ -40,18 +40,18 @@
 		</div>
 	
 	
-		<nav id="menu" class="d-flex mt-2 menu-shadow"> 
+		<nav id="menu" class="d-flex"> 
 			
 			<div class="col-8 ">
 				<ul class="nav justify-content-center">
 				  <li class="nav-item ">
-				    <a class="nav-link active p-3 rounded" th:href="@{/}">Consultas/Exames</a>
+				    <a class="nav-link active p-3" th:href="@{/}">Consultas/Exames</a>
 				  </li>
 				  <li class="nav-item">
-				    <a class="nav-link p-3 rounded" th:href="@{/pacientes/form}">Pacientes</a>
+				    <a class="nav-link p-3" th:href="@{/pacientes/form}">Pacientes</a>
 				  </li>
 				  <li class="nav-item">
-				    <a class="nav-link p-3 rounded" href="#">Relatórios</a>
+				    <a class="nav-link p-3" href="#">Relatórios</a>
 				  </li>
 				</ul>
 			</div>
