Adicionando listagem de pacinetes

--- a/src/main/resources/templates/fragmentos/layout.html
+++ b/src/main/resources/templates/fragmentos/layout.html
@@ -48,7 +48,7 @@
 				    <a class="nav-link active p-3" th:href="@{/}">Consultas/Exames</a>
 				  </li>
 				  <li class="nav-item">
-				    <a class="nav-link p-3" th:href="@{/pacientes/form}">Pacientes</a>
+				    <a class="nav-link p-3" th:href="@{/pacientes/listar}">Pacientes</a>
 				  </li>
 				  <li class="nav-item">
 				    <a class="nav-link p-3" href="#">Relatórios</a>
