--- a/src/main/resources/templates/pacientes/form.html
+++ b/src/main/resources/templates/pacientes/form.html
@@ -29,6 +29,7 @@
 							<input type="text" id="cpf" th:field="*{cpf}" class="form-control my-2" placeholder="CPF" required>
 							<input type="text" id="nome-mae" th:field="*{nomeMae}" class="form-control my-2" placeholder="Nome da Mãe" required  maxlength="100">
 							<input type="text" id="cns" th:field="*{CNS}" class="form-control my-2" placeholder="Cartão Nacional do SUS" required  maxlength="100">
+							<input type="text" id="telefone" th:field="*{telefone}" class="form-control my-2" placeholder="telefone" required  maxlength="100">
 							
 							<div class="form-group row">
 								<div class="col-6">
