Ajeitando placeholder idade

--- a/src/main/resources/templates/pacientes/form.html
+++ b/src/main/resources/templates/pacientes/form.html
@@ -29,7 +29,7 @@
 							<input type="text" id="cpf" th:field="*{cpf}" class="form-control my-2" placeholder="CPF" required>
 							<input type="text" id="nome-mae" th:field="*{nomeMae}" class="form-control my-2" placeholder="Nome da Mãe" required  maxlength="100">
 							<input type="text" id="cns" th:field="*{CNS}" class="form-control my-2" placeholder="Cartão Nacional do SUS" required  maxlength="100">
-							<input type="text" id="telefone" th:field="*{telefone}" class="form-control my-2" placeholder="telefone" required  maxlength="100">
+							<input type="text" id="telefone" th:field="*{telefone}" class="form-control my-2" placeholder="Telefone" required  maxlength="100">
 							
 							<div class="form-group row">
 								<div class="col-6">
@@ -58,7 +58,8 @@
 		<script type="text/javascript">
 		
 			$('#cpf').mask('000.000.000-00', {reverse: true});
-
+			$('#idade').val("");
+			
 		</script>
 	</th:block>
 	
