add botoes voltar no crud de pacientes

--- a/src/main/resources/templates/pacientes/form.html
+++ b/src/main/resources/templates/pacientes/form.html
@@ -48,6 +48,7 @@
 					
 					<div class="d-flex justify-content-center ">
 						<input type="submit" class="btn btn-primary btn-submit-hover btn-sismac" value="Salvar">
+						<a th:href="@{/pacientes/listar}" class="btn btn-primary btn-submit-hover btn-sismac">Voltar</a>
 					</div>
 					
 				</form>
