--- a/src/main/resources/templates/pacientes/listar.html
+++ b/src/main/resources/templates/pacientes/listar.html
@@ -25,8 +25,9 @@
 			<div class="card mt-4 mb-4 p-4 col-8" >
 				<div class="d-flex mb-4 justify-content-end ">
 						<a th:href="@{form}" class="btn btn-primary btn-submit-hover btn-sismac">Novo Paciente</a>
+						<a th:href="@{/}" class="btn btn-primary btn-submit-hover btn-sismac">Voltar</a>
 				</div>
-				<table class="table table-hover">
+				<table class="table table-hover" th:if="${pacientes.size() > 0}">
 					<thead>
 						<tr>
 							<th scope="col">Nome</th>
