--- a/src/main/resources/templates/fragmentos/layout.html
+++ b/src/main/resources/templates/fragmentos/layout.html
@@ -45,7 +45,7 @@
 			<div class="col-8 ">
 				<ul class="nav justify-content-center">
 				  <li class="nav-item ">
-				    <a class="nav-link active p-3" th:href="@{/}">Consultas/Exames</a>
+				    <a class="nav-link active p-3" th:href="@{/consultas/listar}">Consultas/Exames</a>
 				  </li>
 				  <li class="nav-item">
 				    <a class="nav-link p-3" th:href="@{/pacientes/listar}">Pacientes</a>
@@ -56,7 +56,7 @@
 				</ul>
 			</div>
 			<div class="col-4 p-2">
-				<a href="#" class="btn sismac-btn-warning rounded-pill ">Marcar Consulta/Exame</a>
+				<a th:href="@{/consultas/form}" class="btn sismac-btn-warning rounded-pill ">Marcar Consulta/Exame</a>
 			</div>
 		
 		</nav>
