--- a/src/main/resources/templates/pacientes/listar.html
+++ b/src/main/resources/templates/pacientes/listar.html
@@ -38,7 +38,7 @@
 					</thead>
 					<tbody>
 						<tr th:each="paciente : ${pacientes}">
-							<th th:text="${paciente.nome}"></th>
+							<td th:text="${paciente.nome}"></td>
 							<td th:text="${paciente.cpf}"></td>
 							<td th:text="${paciente.telefone}"></td>
 							<td th:text="${paciente.CNS}"></td>
