--- a/src/main/resources/templates/exames/form.html
+++ b/src/main/resources/templates/exames/form.html
@@ -5,7 +5,7 @@
 	layout:decorate="~{fragmentos/layout}">
 
 <head>
-	<title>Consultas</title>
+	<title>Exames</title>
 </head>
 
 <body>
@@ -14,35 +14,37 @@
 		<div class="row" style="height: 200px; background-color: #2f89fc;">
 			<div class="col-12 my-auto">
 				<div class="d-flex justify-content-center">
-					<h2 class="font-weight-bold text-white">Cadastro de Consulta</h2>
+					<h2 class="font-weight-bold text-white">Cadastro de Exames</h2>
 				</div>
 			</div>
 		</div>
 		
 		<div class="d-flex justify-content-center">
 			<div class="card mt-4 mb-4 p-4 col-8" >
-				<form class="py-2" th:action="@{/consultas/salvar}" th:object="${consulta}">
+				<form class="py-2" th:action="@{/exames/salvar}" th:object="${exame}">
 	
 					<div class="d-flex justify-content-center form-group">
 						<div class="col-12 col-sm-8">
+							
+							<select class="form-control" th:field="*{tituloExame}" required>
+								<option value="">Tipo do Exame</option>
+								<option value="Glicose">Glicose</option>
+								<option value="Raio X">Raio X</option>
+								<option value="Ultrassom">Ultrassom</option>
+							</select>
 							
 							<select class="form-control" th:field="*{paciente}" required>
 								<option value="">Paciente</option>
 								<option th:each="paciente : ${pacientes}" th:value="${paciente.id}" th:text="${paciente.nome}"></option>
 							</select>
 							
-							<select class="form-control" th:field="*{medico}" required>
-								<option value="">Médico</option>
-								<option th:each="medico : ${medicos}" th:value="${medico.id}" th:text="${medico.nome}"></option>
-							</select>
-							
-							<input class="form-control" type="text" th:field="*{dataConsulta}" required  onfocus="(this.type='date')" onblur="(this.type='text')" placeholder="Data da Consulta">
+							<input class="form-control" type="text" th:field="*{dataExame}" required  onfocus="(this.type='date')" onblur="(this.type='text')" placeholder="Data da Consulta">
 														
 						</div>
 					</div>	
 					
 					<div class="d-flex justify-content-center ">
-						<a th:href="@{/consultas/listar}" class="btn btn-primary btn-submit-hover btn-sismac">Voltar</a>
+						<a th:href="@{/exames/listar}" class="btn btn-primary btn-submit-hover btn-sismac">Voltar</a>
 						<input type="submit" class="btn btn-primary btn-submit-hover btn-sismac" value="Salvar">
 					</div>
 					
