--- a/src/main/resources/templates/fragmentos/layout.html
+++ b/src/main/resources/templates/fragmentos/layout.html
@@ -23,26 +23,26 @@
 <body >
 
 	<!-- Topo -->
-	<div >
-		<div class="d-flex justify-content-around p-4" style="background-color: #f9f9f9;">
+	<div class="container-fluid">
+		<div class="row p-4 d-flex justify-content-around" style="background-color: #f9f9f9;">
 			
-			<div>
+			<div class="col-sm-4 col-12 text-center">
 				<i class="fas fa-map-pin text-primary"></i> Canguaretama - RN
 			</div>
-			<div>
+			<div class="col-sm-4 col-12 text-center">
 				<i class="fas fa-id-card-alt text-primary"></i> Sistema de Marcação de Consultas - SISMAC
 			</div>
 			
-			<div >
+			<div class="col-sm-4 col-12 text-center">
 				<i class="fas fa-phone text-primary"></i> (88) 98888-8888
 			</div>
 	
 		</div>
 	
 	
-		<nav id="menu" class="d-flex"> 
+		<nav id="menu" class="d-flex row"> 
 			
-			<div class="col-8 ">
+			<div class="col-sm-8 col-12">
 				<ul class="nav justify-content-center">
 				  <li class="nav-item ">
 				    <a class="nav-link active p-3" th:href="@{/consultas/listar}">Consultas</a>
@@ -58,9 +58,9 @@
 				  </li>
 				</ul>
 			</div>
-			<div class="col-4 p-2">
-				<a th:href="@{/consultas/form}" class="btn sismac-btn-warning rounded-pill ">Marcar Consulta</a>
-				<a th:href="@{/exames/form}" class="btn sismac-btn-warning rounded-pill ">Marcar Exame</a>
+			<div class="col-sm-2 col-12 p-2 btn-group" role="group" aria-label="Basic example" style="max-height: 65px;">
+				<a  th:href="@{/consultas/form}" title="Marcar Consulta" class="btn sismac-btn-warning" style="border-radius: 30px 0 0 30px;" >Consulta</a >
+				<a  th:href="@{/exames/form}" title="Marcar Exame" class="btn sismac-btn-warning " style="border-radius: 0 30px 30px 0;">Exame</a >
 			</div>
 		
 		</nav>
@@ -83,8 +83,7 @@
 	<!-- Rodapé -->
 	<footer class="pt-4 pb-4 m-0 bg-dark text-white container-fluid"> 
 		<div class="row justify-content-center" >
-			<div class="col-4 mr-4">
-			
+			<div class="col-sm-4 col-12">
 				<div class="row ">
 					<h4>SISMAC</h4>
 					<div class="col-12">
@@ -96,7 +95,7 @@
 				
 			</div>
 		
-			<div class="col-4 ml-4">
+			<div class="col-sm-4 col-12">
 				<div class="row">
 					<h4>Qual sua dúvida?</h4>
 					<div class="col-12 text-light">
