--- a/src/main/resources/templates/consultas/form.html
+++ b/src/main/resources/templates/consultas/form.html
@@ -23,27 +23,27 @@
 			<div class="card mt-4 mb-4 p-4 col-8" >
 				<form class="py-2" th:action="@{/consultas/salvar}" th:object="${consulta}">
 	
-					<div class="d-flex justify-content-center form-group">
-						<div class="col-12 col-sm-8">
-							
-							<select class="form-control" th:field="*{paciente}" required>
+					<div class="row d-flex justify-content-center">
+						<div class="col-12 col-lg-8">
+	
+							<select class="form-control my-2" th:field="*{paciente}" required>
 								<option value="">Paciente</option>
 								<option th:each="paciente : ${pacientes}" th:value="${paciente.id}" th:text="${paciente.nome}"></option>
 							</select>
 							
-							<select class="form-control" th:field="*{medico}" required>
+							<select class="form-control my-2" th:field="*{medico}" required>
 								<option value="">Médico</option>
 								<option th:each="medico : ${medicos}" th:value="${medico.id}" th:text="${medico.nome}"></option>
 							</select>
 							
-							<input class="form-control" type="text" th:field="*{dataConsulta}" required  onfocus="(this.type='date')" onblur="(this.type='text')" placeholder="Data da Consulta">
+							<input class="form-control my-2" type="text" th:field="*{dataConsulta}" required  onfocus="(this.type='date')" onblur="(this.type='text')" placeholder="Data da Consulta">
 														
 						</div>
 					</div>	
 					
-					<div class="d-flex justify-content-center ">
-						<a th:href="@{/consultas/listar}" class="btn btn-primary btn-submit-hover btn-sismac">Voltar</a>
-						<input type="submit" class="btn btn-primary btn-submit-hover btn-sismac" value="Salvar">
+					<div class="row d-flex justify-content-center ">
+						<a th:href="@{/consultas/listar}" class="btn btn-primary btn-submit-hover btn-sismac col-12 col-md-6 col-lg-4 col-xl-2 mt-1">Voltar</a>
+						<input type="submit" class="btn btn-primary btn-submit-hover btn-sismac col-12 col-md-6 col-lg-4 col-xl-2 mt-1" value="Salvar">
 					</div>
 					
 				</form>
