--- a/src/main/resources/templates/pacientes/form.html
+++ b/src/main/resources/templates/pacientes/form.html
@@ -20,11 +20,10 @@
 		</div>
 		
 		<div class="d-flex justify-content-center">
-			<div class="card mt-4 mb-4 p-4 col-8" >
+			<div class="card mt-4 mb-4 p-4 col-8 col-md-6" >
 				<form class="py-2" th:action="@{/pacientes/salvar}" th:object="${paciente}">
-	
-					<div class="d-flex justify-content-center form-group">
-						<div class="col-12 col-sm-8">
+					<div class="row d-flex justify-content-center">
+						<div class="col-12 col-lg-8">
 							<input type="text" id="nome" th:field="*{nome}" class="form-control my-2" placeholder="Nome Completo" required maxlength="100">
 							<input type="text" id="cpf" th:field="*{cpf}" class="form-control my-2" placeholder="CPF" required>
 							<input type="text" id="nome-mae" th:field="*{nomeMae}" class="form-control my-2" placeholder="Nome da Mãe" required  maxlength="100">
@@ -32,10 +31,10 @@
 							<input type="text" id="telefone" th:field="*{telefone}" class="form-control my-2" placeholder="Telefone" required  maxlength="100">
 							
 							<div class="form-group row">
-								<div class="col-6">
+								<div class="col-12 col-sm-6">
 									<input type="number" id="idade" th:field="*{idade}" title="idade" class="form-control my-2" placeholder="Idade" required min="1" max="120">
 								</div>
-								<div class="col-6">
+								<div class="col-12 col-sm-6">
 									<select id="sexo" th:field="*{sexo}" class="form-control my-2" required>
 										<option value="">Sexo</option>
 										<option value="M">Masculino</option>
@@ -46,9 +45,10 @@
 						</div>
 					</div>	
 					
-					<div class="d-flex justify-content-center ">
-						<a th:href="@{/pacientes/listar}" class="btn btn-primary btn-submit-hover btn-sismac">Voltar</a>
-						<input type="submit" class="btn btn-primary btn-submit-hover btn-sismac" value="Salvar">
+					<div class="d-flex justify-content-center row">
+						<input type="submit" class="btn btn-primary btn-submit-hover btn-sismac col-12 col-md-6 col-lg-4 col-xl-2 mt-1" value="Salvar">
+						<a th:href="@{/pacientes/listar}" class="btn btn-primary btn-submit-hover btn-sismac col-12 col-md-6 col-lg-4 col-xl-2 mt-1" >Voltar</a>
+						
 					</div>
 					
 				</form>
