--- a/src/main/resources/templates/pacientes/listar.html
+++ b/src/main/resources/templates/pacientes/listar.html
@@ -20,31 +20,43 @@
 		</div>
 		
 		<div class="d-flex justify-content-center">
-		
 			
 			<div class="card mt-4 mb-4 p-4 col-8" >
-				<div class="d-flex mb-4 justify-content-end ">
-						<a th:href="@{form}" class="btn btn-primary btn-submit-hover btn-sismac">Novo Paciente</a>
-						<a th:href="@{/}" class="btn btn-primary btn-submit-hover btn-sismac">Voltar</a>
+				
+				<div class="d-flex mb-4 justify-content-end row ">
+					<a th:href="@{form}" class="btn btn-primary btn-submit-hover btn-sismac col-12 col-md-6 col-lg-4 col-xl-2">Novo Paciente</a>
 				</div>
-				<table class="table table-hover" th:if="${pacientes.size() > 0}">
-					<thead>
-						<tr>
-							<th scope="col">Nome</th>
-							<th scope="col">CPF</th>
-							<th scope="col">Telefone</th>
-							<th scope="col">CNS</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr th:each="paciente : ${pacientes}">
-							<td th:text="${paciente.nome}"></td>
-							<td th:text="${paciente.cpf}"></td>
-							<td th:text="${paciente.telefone}"></td>
-							<td th:text="${paciente.CNS}"></td>
-						</tr>
-					</tbody>
-				</table>
+				
+				<div class="row">
+					
+					<table class="table table-hover col-12" th:if="${pacientes.size() > 0}">
+						<thead>
+							<tr>
+								<th scope="col">Nome</th>
+								<th scope="col">CPF</th>
+								<th scope="col">Telefone</th>
+								<th scope="col">CNS</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr th:each="paciente : ${pacientes}">
+								<td th:text="${paciente.nome}"></td>
+								<td th:text="${paciente.cpf}"></td>
+								<td th:text="${paciente.telefone}"></td>
+								<td th:text="${paciente.CNS}"></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				
+				
+				<div th:if="${pacientes.size() <= 0}">
+					Nenhum Pacientes Cadastrado.
+				</div>
+				
+				<div class="d-flex mb-4 justify-content-end row ">
+					<a th:href="@{/}" class="btn btn-primary btn-submit-hover btn-sismac col-12 col-md-6 col-lg-4 col-xl-2">Voltar</a>
+				</div>
 				
 			</div>
 		
