--- a/src/main/resources/templates/exames/form.html
+++ b/src/main/resources/templates/exames/form.html
@@ -20,7 +20,7 @@
 		</div>
 		
 		<div class="d-flex justify-content-center">
-			<div class="card mt-4 mb-4 p-4 col-8" >
+			<div class="card mt-4 mb-4 p-4 col-12 col-sm-10 col-lg-6" >
 				<form class="py-2" th:action="@{/exames/salvar}" th:object="${exame}">
 	
 					<div class="d-flex justify-content-center form-group">
@@ -43,9 +43,10 @@
 						</div>
 					</div>	
 					
-					<div class="d-flex justify-content-center ">
-						<a th:href="@{/exames/listar}" class="btn btn-primary btn-submit-hover btn-sismac">Voltar</a>
-						<input type="submit" class="btn btn-primary btn-submit-hover btn-sismac" value="Salvar">
+					<div class="d-flex justify-content-center row">
+						<input type="submit" class="btn btn-primary btn-submit-hover btn-sismac col-12 col-md-6 col-lg-4 col-xl-2 mt-1" value="Salvar">
+						<a th:href="@{/exames/listar}" class="btn btn-primary btn-submit-hover btn-sismac col-12 col-md-6 col-lg-4 col-xl-2 mt-1">Voltar</a>
+						
 					</div>
 					
 				</form>
