--- a/src/main/resources/templates/exames/listar.html
+++ b/src/main/resources/templates/exames/listar.html
@@ -22,9 +22,9 @@
 		<div class="d-flex justify-content-center">
 		
 			
-			<div class="card mt-4 mb-4 p-4 col-8" >
+			<div class="card mt-4 mb-4 p-4 col-12 col-sm-10 col-md-8 table-responsive" >
 				
-				<table class="table table-hover" th:if="${exames.size() > 0}">
+				<table id="tbl-exames" class="table table-hover" th:if="${exames.size() > 0}">
 					<thead>
 						<tr>
 							<th scope="col">Título</th>
@@ -58,6 +58,16 @@
 		<script type="text/javascript">
 		
 			$('#cpf').mask('000.000.000-00', {reverse: true});
+			
+			$(document).ready( function () {
+			    $('#tbl-exames').DataTable({
+			    	
+			    	language: {
+			            url: '/sismac/vendor/Portuguese-Brasil.json'
+			        }
+			    	
+			    });
+			});
 
 		</script>
 	</th:block>
