--- a/src/main/resources/templates/fragmentos/layout.html
+++ b/src/main/resources/templates/fragmentos/layout.html
@@ -13,10 +13,15 @@
     <script th:src="@{/vendor/js/jquery.mask.js}"></script>	
 	<script th:src="@{/vendor/fontawesome/js/all.min.js}"></script>
 	<script th:src="@{/vendor/bootstrap/bootstrap.min.js}"></script>
+	<script type="text/javascript" th:src="@{/vendor/js/datatables.min.js}"></script>
 	
 	<link rel="stylesheet"th:href="@{/vendor/bootstrap/bootstrap.min.css}">
 	<link rel="stylesheet"th:href="@{/vendor/fontawesome/css/all.min.css}">
 	<link rel="stylesheet"th:href="@{/vendor/css/sismac.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/vendor/css/datatables.min.css}"/>
+ 
+
+	
 	
 	
 </head>
@@ -52,9 +57,6 @@
 				  </li>
 				  <li class="nav-item">
 				    <a class="nav-link p-3" th:href="@{/pacientes/listar}">Pacientes</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="nav-link p-3" href="#">Relatórios</a>
 				  </li>
 				</ul>
 			</div>
