--- a/src/main/resources/templates/pacientes/form.html
+++ b/src/main/resources/templates/pacientes/form.html
@@ -20,7 +20,7 @@
 		</div>
 		
 		<div class="d-flex justify-content-center">
-			<div class="card mt-4 mb-4 p-4 col-8 col-md-6" >
+			<div class="card mt-4 mb-4 p-4 col-12 col-sm-10 col-lg-6" >
 				<form class="py-2" th:action="@{/pacientes/salvar}" th:object="${paciente}">
 					<div class="row d-flex justify-content-center">
 						<div class="col-12 col-lg-8">
@@ -59,6 +59,7 @@
 		<script type="text/javascript">
 		
 			$('#cpf').mask('000.000.000-00', {reverse: true});
+			$('#telefone').mask('(00) 00000-0000');
 			$('#idade').val("");
 			
 		</script>
