--- a/src/main/resources/templates/pacientes/listar.html
+++ b/src/main/resources/templates/pacientes/listar.html
@@ -21,40 +21,36 @@
 		
 		<div class="d-flex justify-content-center">
 			
-			<div class="card mt-4 mb-4 p-4 col-8" >
+			<div class="card mt-4 mb-4 p-4 col-12 col-sm-10 col-md-8 table-responsive" >
 				
 				<div class="d-flex mb-4 justify-content-end row ">
 					<a th:href="@{form}" class="btn btn-primary btn-submit-hover btn-sismac col-12 col-md-6 col-lg-4 col-xl-2">Novo Paciente</a>
 				</div>
-				
-				<div class="row">
-					
-					<table class="table table-hover col-12" th:if="${pacientes.size() > 0}">
-						<thead>
-							<tr>
-								<th scope="col">Nome</th>
-								<th scope="col">CPF</th>
-								<th scope="col">Telefone</th>
-								<th scope="col">CNS</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr th:each="paciente : ${pacientes}">
-								<td th:text="${paciente.nome}"></td>
-								<td th:text="${paciente.cpf}"></td>
-								<td th:text="${paciente.telefone}"></td>
-								<td th:text="${paciente.CNS}"></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-				
-				
+	
+				<table id="tbl-pacientes" class="table table-hover" th:if="${pacientes.size() > 0}">
+					<thead>
+						<tr>
+							<th scope="col">Nome</th>
+							<th scope="col">CPF</th>
+							<th scope="col">Telefone</th>
+							<th scope="col">CNS</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="paciente : ${pacientes}">
+							<td th:text="${paciente.nome}"></td>
+							<td id="cpf" data-mask="000.000.000-00" th:text="${paciente.cpf}"></td>
+							<td id="telefone" th:text="${paciente.telefone}"></td>
+							<td th:text="${paciente.CNS}"></td>
+						</tr>
+					</tbody>
+				</table>
+	
 				<div th:if="${pacientes.size() <= 0}">
 					Nenhum Pacientes Cadastrado.
 				</div>
 				
-				<div class="d-flex mb-4 justify-content-end row ">
+				<div class="d-flex mb-4 justify-content-end row mt-2">
 					<a th:href="@{/}" class="btn btn-primary btn-submit-hover btn-sismac col-12 col-md-6 col-lg-4 col-xl-2">Voltar</a>
 				</div>
 				
@@ -65,6 +61,17 @@
 		<script type="text/javascript">
 		
 			$('#cpf').mask('000.000.000-00', {reverse: true});
+			$('#telefone').mask('(00) 00000-0000');
+			
+			$(document).ready( function () {
+			    $('#tbl-pacientes').DataTable({
+			    	
+			    	language: {
+			            url: '/sismac/vendor/Portuguese-Brasil.json'
+			        }
+			    	
+			    });
+			});
 
 		</script>
 	</th:block>
