--- a/src/main/resources/templates/exames/form.html
+++ b/src/main/resources/templates/exames/form.html
@@ -20,7 +20,7 @@
 		</div>
 		
 		<div class="d-flex justify-content-center">
-			<div class="card mt-4 mb-4 p-4 col-12 col-sm-10 col-lg-6" >
+			<div class="card mt-4 mb-4 p-4 col-10 col-sm-10y" >
 				<form class="py-2" th:action="@{/exames/salvar}" th:object="${exame}">
 	
 					<div class="d-flex justify-content-center form-group">
