--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,46 +1,54 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" 
 	xmlns:th="http://www.thymeleaf.org" 
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" 
-	layout:decorate="~{fragmentos/layout}">
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" >
+	
+	<link rel="stylesheet"th:href="@{/vendor/bootstrap/bootstrap.min.css}">
+	<link rel="stylesheet"th:href="@{/vendor/css/sismac.css}">
 <head>
 <title>Login</title>
-</head>
-<body>
 
-	<th:block layout:fragment="conteudo">
-		<div class="row" style="height: 200px; background-color: #2f89fc;">
-			<div class="col-12 my-auto">
-				<div class="d-flex justify-content-center">
-					<h2 class="font-weight-bold text-white">Login</h2>
-				</div>
-			</div>
-		</div>
+	<style type="text/css">
 		
-		<div class="d-flex justify-content-center">
-			<div class="card mt-4 mb-4 p-4 col-8 col-md-6" >
-				<form class="py-2" action="#" >
+		.card-border {
+			border: solid 2px #2f89fc;		
+		}
 	
-					<div class="d-flex justify-content-center form-group">
-						<div class="col-12 col-md-10 col-lg-6">
-							<input type="text" id="nome" class="form-control my-2" placeholder="Login" required maxlength="100">
-							<input type="password" id="telefone" class="form-control my-2" placeholder="Senha" required  maxlength="100">
-						</div>
-					</div>	
-					
-					<div class="form-group">
-						<div class="row d-flex justify-content-center">
-							<input type="submit" class="btn btn-primary btn-submit-hover btn-sismac col-12 col-md-8 col-lg-2" value="Login">
-						</div>
-					</div>
-					
-					
-				</form>
-			</div>
-		
-		</div>
-		
-	</th:block>
+	</style>
+
+</head>
+<body bgcolor="#3b9aff" >
+
+	<div id="conteudo">
+		<div class="container-fluid" style="height: 100%"> 
+			<div class="row h-100 ">
+			   <div class="col-12 my-auto d-flex justify-content-center">
+			   
+			     <div class="card card-block col-10 col-sm-6 col-md-4 card-border" style="background-color: #b9daff;">
+			     
+			     	<h4 class="card-title text-center mt-2 font-weight-bold" >Login</h4>
+			     	
+			     	<form class="py-2" action="consultas/listar" >
 	
+						<div class="d-flex justify-content-center form-group">
+							<div class="col-12 col-lg-8">
+								<input type="text" id="nome" class="form-control my-2" placeholder="Login" required maxlength="100">
+								<input type="password" id="cpf" class="form-control my-2" placeholder="Senha" required>					
+							</div>
+						</div>	
+						
+						<div class="d-flex justify-content-center row">
+							<input type="submit" class="btn btn-primary btn-submit-hover btn-sismac col-12 col-md-6 col-lg-4 col-xl-2 mt-1" value="Login">
+						</div>
+						
+					</form>
+			     
+			     </div>
+			   </div>
+			</div>
+	
+		</div>
+	</div>
+
 </body>
 </html>
