Refazendo págin ade login

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,12 +19,12 @@
 </head>
 <body bgcolor="#3b9aff" >
 
-	<div id="conteudo">
+	<div id="conteudo" style="background-color: white;">
 		<div class="container-fluid" style="height: 100%"> 
 			<div class="row h-100 ">
 			   <div class="col-12 my-auto d-flex justify-content-center">
 			   
-			     <div class="card card-block col-10 col-sm-6 col-md-4 card-border" style="background-color: #b9daff;">
+			     <div class="card card-block card-border pt-4" style="background-color: #b9daff; width: 400px; height: 400px">
 			     
 			     	<h4 class="card-title text-center mt-2 font-weight-bold" >Login</h4>
 			     	
@@ -38,7 +38,7 @@
 						</div>	
 						
 						<div class="d-flex justify-content-center row">
-							<input type="submit" class="btn btn-primary btn-submit-hover btn-sismac col-12 col-md-6 col-lg-4 col-xl-2 mt-1" value="Login">
+							<input type="submit" class="btn btn-primary btn-submit-hover btn-sismac col-6 col-md-4 col-lg-3 col-xl-3 mt-1" value="Login">
 						</div>
 						
 					</form>
