--- a/src/main/resources/templates/exames/form.html
+++ b/src/main/resources/templates/exames/form.html
@@ -20,25 +20,25 @@
 		</div>
 		
 		<div class="d-flex justify-content-center">
-			<div class="card mt-4 mb-4 p-4 col-10 col-sm-10y" >
+			<div class="card mt-4 mb-4 p-4 col-12 col-sm-10 col-lg-6" >
 				<form class="py-2" th:action="@{/exames/salvar}" th:object="${exame}">
 	
 					<div class="d-flex justify-content-center form-group">
 						<div class="col-12 col-sm-8">
 							
-							<select class="form-control" th:field="*{tituloExame}" required>
+							<select class="form-control my-2" th:field="*{tituloExame}" required>
 								<option value="">Tipo do Exame</option>
 								<option value="Glicose">Glicose</option>
 								<option value="Raio X">Raio X</option>
 								<option value="Ultrassom">Ultrassom</option>
 							</select>
 							
-							<select class="form-control" th:field="*{paciente}" required>
+							<select class="form-control my-2" th:field="*{paciente}" required>
 								<option value="">Paciente</option>
 								<option th:each="paciente : ${pacientes}" th:value="${paciente.id}" th:text="${paciente.nome}"></option>
 							</select>
 							
-							<input class="form-control" type="text" th:field="*{dataExame}" required  onfocus="(this.type='date')" onblur="(this.type='text')" placeholder="Data da Consulta">
+							<input class="form-control my-2" type="text" th:field="*{dataExame}" required  onfocus="(this.type='date')" onblur="(this.type='text')" placeholder="Data da Consulta">
 														
 						</div>
 					</div>	
